Add links in work

--- a/src/pages/work/index.mdx
+++ b/src/pages/work/index.mdx
@@ -23,8 +23,8 @@ import Layout from "../../layouts/Layout.astro";
                 </div>
 
                 At Lucio, an early-stage startup, I have been instrumental in refactoring the product's codebase, leading to a 50% improvement in performance through efficient optimization of components and libraries.
-                Additionally, I revamped the user interface, significantly enhancing the overall user experience. My notable contributions include creating the KAMI AI dashboard and landing page.
-                KAMI AI is an API as a service product that utilizes OCR technology to read and translate files, allowing users to query the document after processing.
+                Additionally, I revamped the user interface, significantly enhancing the overall user experience. My notable contributions include creating the Kami AI dashboard and landing page.
+                <a class="font-bold underline decoration-sky-400 hover:text-sky-400" href="https://kamiai.co/">Kami AI</a> is an API as a service product that utilizes OCR technology to read and translate files, allowing users to query the document after processing.
 
             </section>
 
@@ -36,7 +36,7 @@ import Layout from "../../layouts/Layout.astro";
                     </span>
                 </div>
 
-                During my tenure at Dokonaly, I led the development of AllMasters.ai, a comprehensive logistics platform that seamlessly integrates three user interfaces into a single system, enhancing user experience and operational efficiency.
+                During my tenure at Dokonaly, I led the development of <a class="font-bold underline decoration-yellow-400 hover:text-yellow-400" href="https://www.allmasters.ai/">Allmasters.ai</a>, a comprehensive logistics platform that seamlessly integrates three user interfaces into a single system, enhancing user experience and operational efficiency.
                 I implemented state management, data fetching, routing, and form handling functionalities using industry-standard libraries, ensuring a smooth user experience and a maintainable codebase.
                 My role required effective collaboration with cross-functional teams to deliver integrated solutions, showcasing my proficiency in both front-end and back-end development.
                 The logistics product I developed and deployed is currently in production use, delivering measurable improvements to the company's operations.
