Remove html tags and change it to markdown content

--- a/src/pages/work/index.mdx
+++ b/src/pages/work/index.mdx
@@ -7,55 +7,38 @@ author: "Yogesh S"
 import Layout from "../../layouts/Layout.astro";
 
 <Layout title={frontmatter.title}>
-    <main class="p-10 pt-2 font-urbanist flex flex-col">
-        <h1 class="font-medium text-4xl mb-8 tracking-tighter">My Work</h1>
-
+    <main class="p-10 pt-2 font-urbanist flex flex-col prose prose-stone dark:prose-invert prose-h1:mb-1 prose-h2:mb-1 prose-hr:my-6 prose-p:my-1">
+        # My Work
+        
         Having ignited my passion for web development, I embarked on a journey to
         translate my technical background and newfound coding skills into real-world
         applications. Here's a glimpse into my professional experience,
-        <hr class="my-6 border-neutral-300 dark:border-neutral-700"></hr>
+        ***
 
-        <div class="flex flex-col gap-4 *:flex *:flex-col *:gap-2">
-            <section>
-                <div>
-                    <h2 class="font-medium text-xl mb-1 tracking-tighter">Fullstack Developer</h2>
-                    <span class="text-neutral-600 dark:text-neutral-400 text-sm">Lucio</span>
-                </div>
+        ## Fullstack Developer
+        *Lucio*
 
-                At Lucio, an early-stage startup, I have been instrumental in refactoring the product's codebase, leading to a 50% improvement in performance through efficient optimization of components and libraries.
-                Additionally, I revamped the user interface, significantly enhancing the overall user experience. My notable contributions include creating the Kami AI dashboard and landing page.
-                <a class="font-bold underline decoration-sky-400 hover:text-sky-400" href="https://kamiai.co/">Kami AI</a> is an API as a service product that utilizes OCR technology to read and translate files, allowing users to query the document after processing.
+        At Lucio, an early-stage startup, I have been instrumental in refactoring the product's codebase, leading to a 50% improvement in performance through efficient optimization of components and libraries.
+        Additionally, I revamped the user interface, significantly enhancing the overall user experience. My notable contributions include creating the Kami AI dashboard and landing page.
+        <a class="font-bold underline decoration-sky-400 hover:text-sky-400" href="https://kamiai.co/">Kami AI</a> is an API as a service product that utilizes OCR technology to read and translate files, allowing users to query the document after processing.
+        ***
 
-            </section>
+        ## Web Developer
+        *Dokonaly, Oct 2022 - Feb 2024*
 
-            <section>
-                <div>
-                    <h2 class="font-medium text-xl mb-1 tracking-tighter">Web Developer</h2>
-                    <span class="text-neutral-600 dark:text-neutral-400 text-sm">
-                        Dokonaly, Oct 2022 - Feb 2024
-                    </span>
-                </div>
+        During my tenure at Dokonaly, I led the development of <a class="font-bold underline decoration-yellow-400 hover:text-yellow-400" href="https://www.allmasters.ai/">Allmasters.ai</a>, a comprehensive logistics platform that seamlessly integrates three user interfaces into a single system, enhancing user experience and operational efficiency.
+        I implemented state management, data fetching, routing, and form handling functionalities using industry-standard libraries, ensuring a smooth user experience and a maintainable codebase.
+        My role required effective collaboration with cross-functional teams to deliver integrated solutions, showcasing my proficiency in both front-end and back-end development.
+        The logistics product I developed and deployed is currently in production use, delivering measurable improvements to the company's operations.
+        ***
 
-                During my tenure at Dokonaly, I led the development of <a class="font-bold underline decoration-yellow-400 hover:text-yellow-400" href="https://www.allmasters.ai/">Allmasters.ai</a>, a comprehensive logistics platform that seamlessly integrates three user interfaces into a single system, enhancing user experience and operational efficiency.
-                I implemented state management, data fetching, routing, and form handling functionalities using industry-standard libraries, ensuring a smooth user experience and a maintainable codebase.
-                My role required effective collaboration with cross-functional teams to deliver integrated solutions, showcasing my proficiency in both front-end and back-end development.
-                The logistics product I developed and deployed is currently in production use, delivering measurable improvements to the company's operations.
-            </section>
+        ## Junior Engineer
+        *Mindtree, Oct 2021 - Sept 2022*
 
-            <section>
-                <div>
-                    <h2 class="font-medium text-xl mb-1 tracking-tighter">Junior Engineer</h2>
-                    <span class="text-neutral-600 dark:text-neutral-400 text-sm">
-                        Mindtree, Oct 2021 - Sept 2022
-                    </span>
-                </div>
-
-                At Mindtree, I provided comprehensive technical support for Microsoft Power BI, assisting clients with troubleshooting, issue resolution, and expert guidance.
-                Leveraging my web development knowledge, I diagnosed and resolved client-reported issues impacting report functionality and data visualization.
-                I developed and implemented custom Power BI solutions, focusing on data manipulation, report creation, and automation to ensure user-friendliness and efficiency.
-                My efforts resulted in maintaining a 98% customer satisfaction rate by consistently resolving level 1 and 2 support requests efficiently and effectively.
-            </section>
-        </div>
+        At Mindtree, I provided comprehensive technical support for Microsoft Power BI, assisting clients with troubleshooting, issue resolution, and expert guidance.
+        Leveraging my web development knowledge, I diagnosed and resolved client-reported issues impacting report functionality and data visualization.
+        I developed and implemented custom Power BI solutions, focusing on data manipulation, report creation, and automation to ensure user-friendliness and efficiency.
+        My efforts resulted in maintaining a 98% customer satisfaction rate by consistently resolving level 1 and 2 support requests efficiently and effectively.
     </main>
 
 </Layout>
