Change work experience content

--- a/src/pages/work/index.mdx
+++ b/src/pages/work/index.mdx
@@ -18,27 +18,19 @@ import Layout from "../../layouts/Layout.astro";
         ## Fullstack Developer
         *Lucio*
 
-        At Lucio, an early-stage startup, I have been instrumental in refactoring the product's codebase, leading to a 50% improvement in performance through efficient optimization of components and libraries.
-        Additionally, I revamped the user interface, significantly enhancing the overall user experience. My notable contributions include creating the Kami AI dashboard and landing page.
-        <a class="font-bold underline decoration-sky-400 hover:text-sky-400" href="https://kamiai.co/">Kami AI</a> is an API as a service product that utilizes OCR technology to read and translate files, allowing users to query the document after processing.
+        At <a class="font-bold underline decoration-sky-400 hover:text-sky-400" href="https://www.lucioai.com/">Lucio</a>, I played a pivotal role in optimizing the product's performance by refactoring the codebase, leading to a significant 50% improvement. I also contributed to enhancing the user experience by developing new features and revamping the user interface. Additionally, I collaborated on building APIs that power core functionalities.
         ***
 
         ## Web Developer
         *Dokonaly, Oct 2022 - Feb 2024*
 
-        During my tenure at Dokonaly, I led the development of <a class="font-bold underline decoration-yellow-400 hover:text-yellow-400" href="https://www.allmasters.ai/">Allmasters.ai</a>, a comprehensive logistics platform that seamlessly integrates three user interfaces into a single system, enhancing user experience and operational efficiency.
-        I implemented state management, data fetching, routing, and form handling functionalities using industry-standard libraries, ensuring a smooth user experience and a maintainable codebase.
-        My role required effective collaboration with cross-functional teams to deliver integrated solutions, showcasing my proficiency in both front-end and back-end development.
-        The logistics product I developed and deployed is currently in production use, delivering measurable improvements to the company's operations.
+        During my time at Dokonaly, I spearheaded the development of <a class="font-bold underline decoration-yellow-400 hover:text-yellow-400" href="https://www.allmasters.ai/">Allmasters.ai</a>, a sophisticated logistics platform. I integrated three distinct user interfaces into a unified system, significantly improving user experience and operational efficiency. I meticulously crafted a maintainable codebase, ensuring smooth user interactions and seamless data flow.
         ***
 
         ## Junior Engineer
         *Mindtree, Oct 2021 - Sept 2022*
 
-        At Mindtree, I provided comprehensive technical support for Microsoft Power BI, assisting clients with troubleshooting, issue resolution, and expert guidance.
-        Leveraging my web development knowledge, I diagnosed and resolved client-reported issues impacting report functionality and data visualization.
-        I developed and implemented custom Power BI solutions, focusing on data manipulation, report creation, and automation to ensure user-friendliness and efficiency.
-        My efforts resulted in maintaining a 98% customer satisfaction rate by consistently resolving level 1 and 2 support requests efficiently and effectively.
+        During my time at <a class="font-bold underline decoration-purple-400 hover:text-purple-400" href="https://www.ltimindtree.com/">Mindtree</a>W, I excelled in providing technical support for Microsoft Power BI. I resolved complex client issues, developed custom solutions, and implemented automation to streamline processes and enhance user satisfaction. My dedication to delivering exceptional support contributed to a remarkable 98% customer satisfaction rating.
     </main>
 
 </Layout>
