--- a/src/pages/work/index.mdx
+++ b/src/pages/work/index.mdx
@@ -30,7 +30,7 @@ import Layout from "../../layouts/Layout.astro";
         ## Junior Engineer
         *Mindtree, Oct 2021 - Sept 2022*
 
-        During my time at <a class="font-bold underline decoration-purple-400 hover:text-purple-400" href="https://www.ltimindtree.com/">Mindtree</a>W, I excelled in providing technical support for Microsoft Power BI. I resolved complex client issues, developed custom solutions, and implemented automation to streamline processes and enhance user satisfaction. My dedication to delivering exceptional support contributed to a remarkable 98% customer satisfaction rating.
+        During my time at <a class="font-bold underline decoration-purple-400 hover:text-purple-400" href="https://www.ltimindtree.com/">Mindtree</a>, I excelled in providing technical support for Microsoft Power BI. I resolved complex client issues, developed custom solutions, and implemented automation to streamline processes and enhance user satisfaction. My dedication to delivering exceptional support contributed to a remarkable 98% customer satisfaction rating.
     </main>
 
 </Layout>
